# chat_gpsp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  net.rs  osk.rs  utils.rs
src/net/: constants.rs  dns.rs  mod.rs  netc.rs  resolver.rs  udp.rs  utils.rs
src/net/socket/: error.rs  mod.rs  tcp.rs  tls.rs  udp.rs
src/net/traits/: dns.rs  mod.rs
src/openai/: constants.rs  mod.rs  types.rs
src/osk/: constants.rs  osk_state.rs  prelude.rs  utils.rs
src/renderer/: mod.rs
