[package]
name = "chat_gpsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psp = { version = "0.3.7" }
drogue-network = "0.2"
dns-protocol = { version = "0.1.1", default-features = false }
embedded-tls = { version = "0.17", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
heapless = { version = "0.8", features = ["serde"] }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
regex = { version = "1.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
nb = "1"
lazy_static = { version = "1.4", default-features = false, features = [
    "spin_no_std",
] }

[profile.release]
lto = true
